# cricker

./: .gitignore  bibliography.bib  cricker_report.qmd  pyproject.toml
data/: dataset_description.csv  proteomics_fractions.csv  proteomics_fractions.tsv  transcriptomics_fractions.csv  transcriptomics_fractions.tsv
models/: .gitinclude  simple_model.stan
