[project]
name = "cricker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "carrascomj", email = "carrascomurielj@gmail.com" },
    { name = "shannaraTP", email = "shannatp@xs4all.nl" }
]
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.3",
    "arviz==0.17.1",
    "plotnine>=0.12.4",
    "matplotlib",
    "cmdstanpy>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["cricker"]
